# octodns-pihole

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
example/: config.yaml  example.tld.yaml
octodns_pihole/: __init__.py
tests/: test_provider_octodns_pihole.py
